# OS

./: .gitignore  CMakeLists.txt
CP/: CMakeLists.txt  config.json  main.c  main.cpp
CP/doc/: report.docx  title.docx
CP/include/: Barrier.h  DAG.h  Job.h  ThreadPool.h  cp.h  tools.h
CP/src/: Barrier.cpp  DAG.cpp  Job.cpp  ThreadPool.cpp  cp.c  tools.cpp
LW1/: CMakeLists.txt  main.c
LW1/include/: utils.h
LW1/src/: child.c  parent.c  utils.c
LW2/: CMakeLists.txt  main.c
LW2/include/: utils.h
LW2/src/: utils.c
LW3/: CMakeLists.txt
LW3/include/: utils.h
LW3/src/: child.c  parent.c  utils.c
LW4/: CMakeLists (1).txt  CMakeLists.txt  dynamic.c  main1.c  main2.c  static.c
LW4/include/: lib1.h  lib2.h
LW4/src/: src1.c  src2.c
LW5/: CMakeLists.txt  main.c
LW5/include/: compute_node.h  control_node.h  message.h  node.h  pending_ops.h  tree.h
LW5/src/: compute_node.c  control_node.c  message.c  tree.c
LW567/: CMakeLists.txt  main.cpp
LW567/doc/: 567.docx
LW567/include/: controller.h  tools.h  worker.h
LW567/src/: controller.cpp  tools.cpp  worker.cpp
LW8/: cp_log.txt  lab1_log.txt  lab2_log.txt  lab3_log.txt  lab4d_log.txt  lab4s_log.txt  lab5_log.txt
Reports/CP/: CP.docx
Reports/LW1/: LW1.docx
Reports/LW2/: LW2.docx
Reports/LW3/: LW3.docx
Reports/LW4/: LW4.docx
Reports/LW5-7/: LW5-7.docx
Reports/LW8/: LW8.docx
tests/: CMakeLists (1).txt  CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab567_test.cpp  lab5_test1.cpp  lab5_test2.cpp  lab8_tests.cpp  test1
